--- a/src/material/core/option/option.scss
+++ b/src/material/core/option/option.scss
@@ -84,6 +84,9 @@
   .mdc-list-item__primary-text {
     white-space: normal;
 
+    // In case the label is one long string that doesn't break into multiple lines.
+    word-break: break-word;
+
     // MDC assigns the typography to this element, rather than the option itself, which will break
     // existing overrides. Set all of the typography-related properties to `inherit` so that any
     // styles set on the host can propagate down.
